# nimbro_api_interfaces

./: .gitignore  CMakeLists.txt  README.md  package.xml
msg/: ApiUsage.msg
srv/: CompletionsContextSet.srv  CompletionsPrompt.srv  GetEmbeddings.srv  GetNimbroVision.srv  ImagesGet.srv  SpeechGet.srv  TranscriptionsGet.srv  TranslationsGet.srv  UsageGet.srv
